@@ -1,3 +1,4 @@
+* Add 'login.host' options to hide server connection
 * Handle required attribute with local domains
 * Allow to run wizard in tabs
 * Add "Change Accelerators" option
